tests/baselines/reference/assignmentCompatWithConstructSignaturesWithOptionalParameters.errors.txt
==== tests/cases/compiler/assignmentCompatWithConstructSignaturesWithOptionalParameters.ts (5 errors) ====
    // call signatures in derived types must have the same or fewer optional parameters as the base type
    
    interface Base { 
        a: new () => number;
        a2: new (x?: number) => number;
        a3: new (x: number) => number;
        a4: new (x: number, y?: number) => number;
        a5: new (x?: number, y?: number) => number;
        a6: new (x: number, y: number) => number;
    }
    var b: Base;
    
    var a: new () => number;
        a = b.a; // ok
        a = b.a2; // ok
        a = b.a3; // error
        ~
!!! assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(16,5): error TS2012: Cannot convert 'new(x: number) => number' to 'new() => number':
!!! 	Construct signatures of types 'new(x: number) => number' and 'new() => number' are incompatible:
!!! 		Call signature expects 0 or fewer parameters.
        a = b.a4; // error
        ~
!!! assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(17,5): error TS2012: Cannot convert 'new(x: number, y?: number) => number' to 'new() => number':
!!! 	Construct signatures of types 'new(x: number, y?: number) => number' and 'new() => number' are incompatible:
!!! 		Call signature expects 0 or fewer parameters.
        a = b.a5; // ok
        a = b.a6; // error
        ~
!!! assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(19,5): error TS2012: Cannot convert 'new(x: number, y: number) => number' to 'new() => number':
!!! 	Construct signatures of types 'new(x: number, y: number) => number' and 'new() => number' are incompatible:
!!! 		Call signature expects 0 or fewer parameters.
    
    var a2: new (x?: number) => number; 
        a2 = b.a; // ok
        a2 = b.a2; // ok
        a2 = b.a3; // ok
        a2 = b.a4; // ok
        a2 = b.a5; // ok
        a2 = b.a6; // error
        ~~
!!! assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(27,5): error TS2012: Cannot convert 'new(x: number, y: number) => number' to 'new(x?: number) => number':
!!! 	Construct signatures of types 'new(x: number, y: number) => number' and 'new(x?: number) => number' are incompatible:
!!! 		Call signature expects 1 or fewer parameters.
    
    var a3: new (x: number) => number; 
        a3 = b.a; // ok
        a3 = b.a2; // ok
        a3 = b.a3; // ok
        a3 = b.a4; // ok
        a3 = b.a5; // ok
        a3 = b.a6; // error
        ~~
!!! assignmentCompatWithConstructSignaturesWithOptionalParameters.ts(35,5): error TS2012: Cannot convert 'new(x: number, y: number) => number' to 'new(x: number) => number':
!!! 	Construct signatures of types 'new(x: number, y: number) => number' and 'new(x: number) => number' are incompatible:
!!! 		Call signature expects 1 or fewer parameters.
    
    var a4: new (x: number, y?: number) => number;
        a4 = b.a; // ok
        a4 = b.a2; // ok
        a4 = b.a3; // ok
        a4 = b.a4; // ok
        a4 = b.a5; // ok
        a4 = b.a6; // ok
    
    var a5: new (x?: number, y?: number) => number;
        a5 = b.a; // ok
        a5 = b.a2; // ok
        a5 = b.a3; // ok
        a5 = b.a4; // ok
        a5 = b.a5; // ok
        a5 = b.a6; // ok
    